# fishhouse

./: .gitignore  CLAUDE.md  README.md  data-recovery.html  habit-tracker-v5.html  index.html  pyproject.toml  缠论引擎开发规格.md
chanlun/: __init__.py  cli.py  config.py  monitor.py  output.py  probability.py  run_auto.py
chanlun/data/: 300502_30min.csv  300502_daily.csv  __init__.py  calendars.py  consistency.py  fetch.py  health.py  loaders.py  models.py  snapshot.py  symbols.py  weekly.py  xinyisheng_300502_30min_20260408_20260610_macd.csv  xinyisheng_300502_5min_20260526_20260610_macd.csv  xinyisheng_300502_daily_20250701_20260609_macd.csv
chanlun/data/raw/000001/: 000001_sh_daily_20170601_20190630_ohlcv.csv
chanlun/data/sources/: __init__.py  akshare_source.py  base.py  eastmoney_source.py  tdx_source.py  yfinance_source.py
chanlun/structure/: __init__.py  beichi.py  bi.py  fractal.py  inclusion.py  lianli.py  maimaidian.py  xianduan.py  zhongshu.py
docs/: LOW_TOKEN_WORKFLOW.md  PROJECT_STATUS_V0_1.md  QUICKSTART_NEXT_TIME.md  V0_1_MVP_USAGE.md
scripts/: demo_000001.sh  show_events.py
tests/: conftest.py  test_beichi.py  test_bi.py  test_calendars.py  test_consistency.py  test_extreme_cases.py  test_fetch.py  test_fractal.py  test_health.py  test_health_calendar.py  test_inclusion.py  test_integration.py  test_lianli.py  test_loaders.py  test_maimaidian.py  test_models.py  test_output_cli.py  test_probability.py  test_run_auto.py  test_signal_events.py  test_snapshot.py  test_warmup.py  test_weekly.py  test_xianduan.py  test_zhongshu.py
(+4 files in other folders)
